# setuptools-gitver

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
setuptools_gitver/: __init__.py
