[metadata]
name = setuptools-gitver
version = 1.0.0
description = Simple Git version plugin for setuptools
long-description = file: README.rst
keywords = git, version, describe, tag, setuptools
author = Tuomas Suutari
author-email = tuomas@nepnep.net
license = MIT
license_file = LICENSE
url = https://github.com/suutari/setuptools-gitver
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip-safe = True
packages = find:

[options.entry_points]
distutils.commands =
    egg_info = setuptools_gitver:EggInfoCommand

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .git,.tox,./build,./dist,venv
max-complexity = 10

[isort]
multi_line_output=4
skip=.tox,dist,venv
not_skip=__init__.py
